--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
   <title>Pong</title>
 </head>
 <body>
-
-  <canvas id="canvas" width="600" height="400">
-
+  <div id="title" align="center">
+    <h2>Scores</h2>
+  </div>
+  <div id="scores" align="center">
+    <h2>Player 1: <h2 id="player-1-score">0</h2></h2>
+    <h2>Player 2: <h2 id="player-2-score">0</h2></h2>
+  </div>
+  <div align="center">
+    <canvas id="canvas" width="600" height="400">
+  </div>
   <script src="main.bundle.js"></script>
 </body>
 </html>
