--- a/index.html
+++ b/index.html
@@ -6,26 +6,21 @@
 </head>
 <body>
 
-  <div align="center" style="margin-bottom: 50px">
+  <div align="center" style="margin-bottom: 10px">
       <button id="start">Start Game!</button>
       <button id="restart">Restart Game!</button>
   </div>
-
-  <div align="center">
-    <canvas id="canvas" width="600" height="400">
-  <div>
 
   <div id="title" align="center">
     <h2>Scores</h2>
   </div>
   <div id="scores" align="center">
-    <h2>Player 1: <h2 id="player-1-score">0</h2></h2>
-    <h2>Player 2: <h2 id="player-2-score">0</h2></h2>
+    <h2 id="player-1-score">0</h2><h2 id="player-2-score">0</h2>
   </div>
 
   <div align="center">
     <canvas id="canvas" width="600" height="400">
-  </div>
+  <div>
 
   <script src="main.bundle.js"></script>
 
