implemented second player separate controls

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Pong</title>
 </head>
-<body>
+<body style="background: url(http://www.socwall.com/images/wallpapers/31893-2560x1439.jpg)">
 
   <div align="center" style="margin-bottom: 10px">
       <button id="start">Start Game!</button>
@@ -19,7 +19,7 @@
   </div>
 
   <div align="center">
-    <canvas id="canvas" width="600" height="400">
+    <canvas id="canvas" width="600" height="400" style="background: url(http://www.socwall.com/images/wallpapers/31893-2560x1439.jpg)">
   <div>
 
   <script src="main.bundle.js"></script>
